# tracker-miners

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README  README.md  meson.build  meson_options.txt  run-uninstalled.in  tracker-miners.doap
.gitlab-ci/: checkout-tracker.sh
data/: meson.build  org.freedesktop.Tracker.Miner.Files.gschema.xml
docs/manpages/: meson.build  tracker-daemon.1.txt  tracker-extract.1.txt  tracker-index.1  tracker-status.1.txt
docs/website/: README.md  build.py  documentation.md  index.html
po/: POTFILES.in  POTFILES.skip  meson.build  pl.po
src/: meson.build
src/libtracker-extract/: tracker-exif.c  tracker-extract-info.c  tracker-extract-info.h  tracker-guarantee.c  tracker-module-manager.c  tracker-resource-helpers.c  tracker-resource-helpers.h
src/libtracker-miner/: tracker-decorator.c  tracker-decorator.h  tracker-file-notifier.c  tracker-file-notifier.h  tracker-miner-fs.c  tracker-miner-fs.h  tracker-miner-object.c  tracker-miner-object.h  tracker-miner-proxy.c
src/libtracker-miners-common/: meson.build  tracker-common.h  tracker-debug.c  tracker-debug.h  tracker-domain-ontology.h  tracker-enums.h  tracker-sched.c  tracker-seccomp.c
src/miners/apps/: meson.build  org.freedesktop.Tracker1.Miner.Applications.service.in.in  tracker-miner-apps.desktop.in.in
src/miners/fs/: meson.build  org.freedesktop.Tracker.Miner.Files.gschema.xml  org.freedesktop.Tracker3.Miner.Files.service.in.in  tracker-extract-watchdog.c  tracker-main.c  tracker-miner-files-index.c  (+5 more)
src/tracker/: make-uninstalled-command-links.sh  meson.build  tracker-daemon.c  tracker-extract.c  tracker-index.c  tracker-indexing-status.c  tracker-miner-manager.c  tracker-miner-manager.h  tracker-reset.c  tracker-search.c
src/tracker-extract/: 10-flac.rule  10-vorbis.rule  10-xmp.rule  15-executable.rule  15-games.rule  15-text.rule  91-gstreamer-generic-dlna.rule  meson.build  org.freedesktop.Tracker3.Miner.Extract.service.in.in  tracker-config.c  tracker-extract-decorator.c  tracker-extract-desktop.c  tracker-extract-gstreamer.c  tracker-extract-libav.c  tracker-extract-mp3.c  tracker-extract-ps.c  tracker-extract-vorbis.c  tracker-extract.c  tracker-extract.desktop.in.in  tracker-extract.h  tracker-extract.service.in  tracker-main.c
src/tracker-index/: meson.build  org.freedesktop.Tracker3.Miner.Files.Index.service.in  tracker-index.service.in  tracker-main.c  tracker-miner-files-index.c
src/tracker-writeback/: org.freedesktop.Tracker3.Writeback.service.in  tracker-writeback-file.c  tracker-writeback-gstreamer.c  tracker-writeback-playlist.c  tracker-writeback-xmp.c  tracker-writeback.c
tests/: test-bus.conf.in
tests/functional-tests/: 300-miner-basic-ops.py  301-miner-resource-removal.py  310-fts-basic.py  311-fts-file-operations.py  312-fts-stopwords.py  400-extractor-metadata.py  401-extractor-flac-cuesheet.py  410-extractor-decorator.py  500-writeback-images.py  500-writeback.py  501-writeback-details.py  501-writeback-image-details.py  502-writeback-audio.py  600-applications-camera.py  601-applications-sync.py  Makefile.am  applicationstest.py  cli.py  configuration.json.in  configuration.py  extractor-decorator.py  extractor-flac-cuesheet.py  extractor-generic.py  extractor.py  fixtures.py  fts-file-operations.py  helpers.py  meson.build  miner-basic.py  miner-on-demand.py  miner-power.py  miner-resource-removal.py  minerfshelper.py  minerhelper.py  minertest.py  system.py  test-runner.sh  writebacktest.py
tests/libtracker-miner/: meson.build  tracker-file-notifier-test.c  tracker-miner-fs-test.c  tracker-monitor-test.c
tests/libtracker-miners-common/: tracker-file-utils-test.c
tests/services/: meson.build  org.freedesktop.Tracker3.Miner.Extract.service.in  org.freedesktop.Tracker3.Miner.Files.Index.service.in  org.freedesktop.Tracker3.Miner.Files.service.in  org.freedesktop.Tracker3.Writeback.service.in
(+50 files in other folders)
